--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,3 +48,15 @@
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+
+
+@import 'altoqi/temp';
+@import 'altoqi/header';
+@import 'altoqi/footer';
+@import 'altoqi/page-download';
+@import 'altoqi/page-inscricao';
+
+@import 'altoqi/page-home';
+@import 'altoqi/page-single';
+@import 'altoqi/page-indice';
