--- a/scss/altoqi/_page-home.scss
+++ b/scss/altoqi/_page-home.scss
@@ -1,4 +1,4 @@
-.section_block__home-hero{ text-align: center; padding: 100px 0; background-color:#00223b; color:#fff ; margin-bottom: 20px;
+.section_block__home-hero{ text-align: center; padding: 100px 0; background-color:#00223b; color:#fff ; 
   h1 { font-weight: 300;   line-height: 3.4375rem; margin: 2rem 0 0rem 0;
     strong{font-weight: 800;}
   }
