--- a/scss/altoqi/_page-indice.scss
+++ b/scss/altoqi/_page-indice.scss
@@ -4,6 +4,8 @@
         strong{font-weight: 800;}
       }
       h5 {  margin-top: 0; opacity: 0.5; margin-bottom: 20px; }
+      .brand{ width: 260px; max-width: 100%; }
+
   }
   &__accordion{
     &__item{
